# arabic-reshaper-rs

./: CHANGELOG.md  Cargo.toml  README.md  default-config.ini
.github/workflows/: rust.yml
benches/: reshape.rs
src/: algorithm.rs  config_parser.rs  letters.rs  lib.rs  ligatures.rs
src/tests/: mod.rs  test_002_reshaping.rs  test_003_reshaping.rs
tests/: test_002_reshaping.rs  test_003_reshaping.rs
